--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
+        <a href="http://127.0.0.1:5500/index.html">WebStudio</a>
 
         <ul>
-            <li><a href="">Студія</a></li>
-            <li><a href="">Портфоліо</a></li>
-            <li><a href="">Контакти</a></li>
+            <li><a href="http://127.0.0.1:5500/index.html">Студія</a></li>
+            <li><a href="http://127.0.0.1:5500/index.html">Портфоліо</a></li>
+            <li><a href="http://127.0.0.1:5500/index.html">Контакти</a></li>
         </ul>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
