--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <li><a href="http://127.0.0.1:5500/index.html">Портфоліо</a></li>
             <li><a href="http://127.0.0.1:5500/index.html">Контакти</a></li>
         </ul>
-        <ul>
+        <nav>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </nav>
     </header>
 </body>
 </html>
