--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
-
-        <ul>
-            <li><a href="">Студія</a></li>
-            <li><a href="">Портфоліо</a></li>
-            <li><a href="">Контакти</a></li>
-        </ul>
         <nav>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <a href="">WebStudio</a>
+            
+            <ul>
+                <li><a href="">Студія</a></li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>
+            </ul>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </nav>
     </header>
+    <div>
+        <section>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <a href=""><button>Замовити послугу</button></a>
+        </section>
+    </div>
 </body>
 </html>
