--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-01</title>
+    <title>Студія</title>
 </head>
 <body>
+    <!--ШАПКА-->
     <header>
         <nav>
             <a href="">WebStudio</a>
@@ -22,11 +23,57 @@
             </ul>
         </nav>
     </header>
+    <!--Хіро блок-->
     <div>
         <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
-            <a href=""><button>Замовити послугу</button></a>
+            <button>Замовити послугу</button>
         </section>
     </div>
+    <!--Наші переваги-->
+    <section>
+        <h2>Benefits</h2>
+        <ul>
+            <li>
+                <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li>
+                <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li>
+                <h2>ПЛАНУВАННЯ</h2>
+                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li>
+                <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+        </ul>
+    </section>
+    <!--Чим ми займаємося-->
+    <section>
+        <h2>Чим ми займаємося</h2>
+        <img src="./images/work1.jpg" alt="Писання коду" width="370">
+        <img src="./images/work2.jpg" alt="Тримає телефон в руці" width="370">
+        <img src="./images/work3.jpg" alt="Кольорова палітра" width="370">
+    </section>
+    <!--Команда-->
+    <section>
+        <h2>Наша команда</h2>
+        <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270">
+        <h3>Ігор Дем'яненко</h3>
+        <p>Product Designer</p>
+        <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270">
+        <h3>Ольга Рєпіна</h3>
+        <p>Frontend Developer</p>
+        <img src="./images/team3.jpg" alt="Микола Тарасов" width="270">
+        <h3>Микола Тарасов</h3>
+        <p>Marketing</p>
+        <img src="./images/team4.jpg" alt="Михайло Єрмаков" width="270">
+        <h3>Михайло Єрмаков</h3>
+        <p>UI Designer</p>
+    </section>
 </body>
 </html>
