--- a/index.html
+++ b/index.html
@@ -75,5 +75,13 @@
         <h3>Михайло Єрмаков</h3>
         <p>UI Designer</p>
     </section>
+    <footer>
+        <a href="">WebStudio</a>
+        <address>
+            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+    </footer>
 </body>
 </html>
