--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/style.css" rel="stylesheet" type="text/css">
     <title>Студія</title>
 </head>
 <body>
@@ -23,6 +24,7 @@
             </ul>
         </nav>
     </header>
+    <main>
     <!--Хіро блок-->
     <div>
         <section>
@@ -35,19 +37,19 @@
         <h2>Benefits</h2>
         <ul>
             <li>
-                <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li>
-                <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                <h3>ПУНКТУАЛЬНІСТЬ</h3>
                 <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li>
-                <h2>ПЛАНУВАННЯ</h2>
+                <h3>ПЛАНУВАННЯ</h3>
                 <p>Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li>
-                <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
@@ -55,26 +57,40 @@
     <!--Чим ми займаємося-->
     <section>
         <h2>Чим ми займаємося</h2>
-        <img src="./images/work1.jpg" alt="Писання коду" width="370">
-        <img src="./images/work2.jpg" alt="Тримає телефон в руці" width="370">
-        <img src="./images/work3.jpg" alt="Кольорова палітра" width="370">
+        <ul>
+            <li><img src="./images/work1.jpg" alt="Писання коду" width="370"></li>
+            <li><img src="./images/work2.jpg" alt="Тримає телефон в руці" width="370"></li>
+            <li><img src="./images/work3.jpg" alt="Кольорова палітра" width="370"></li>
+        </ul>
     </section>
     <!--Команда-->
     <section>
         <h2>Наша команда</h2>
-        <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270">
-        <h3>Ігор Дем'яненко</h3>
-        <p>Product Designer</p>
-        <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270">
-        <h3>Ольга Рєпіна</h3>
-        <p>Frontend Developer</p>
-        <img src="./images/team3.jpg" alt="Микола Тарасов" width="270">
-        <h3>Микола Тарасов</h3>
-        <p>Marketing</p>
-        <img src="./images/team4.jpg" alt="Михайло Єрмаков" width="270">
-        <h3>Михайло Єрмаков</h3>
-        <p>UI Designer</p>
+        <ul>
+            <li>
+                <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270">
+                <h3>Ігор Дем'яненко</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270">
+                <h3>Ольга Рєпіна</h3>
+                <p>Frontend Developer</p>
+            
+            </li>
+            <li>
+                <img src="./images/team3.jpg" alt="Микола Тарасов" width="270">
+                <h3>Микола Тарасов</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/team4.jpg" alt="Михайло Єрмаков" width="270">
+                <h3>Михайло Єрмаков</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
     </section>
+    </main>
     <footer>
         <a href="">WebStudio</a>
         <address>
